modified app.py file and corrected the index.htlm location for flask to find it.

--- a/sources/templates/index.html
+++ b/sources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Keyword Processing</title>
+    <title>Job Search System</title>
 </head>
 <body>
     <h1>Keyword Processing</h1>
