updates on some logic for how functions are called and in case error happens with database opening we store the data in a file using json dump

--- a/sources/templates/index.html
+++ b/sources/templates/index.html
@@ -14,10 +14,7 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>JobDatabase</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="margin-left: 449px;">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html"><strong><span style="color: rgb(0, 0, 0);">About</span></strong></a></li>
                 </ul>
             </div>
@@ -28,7 +25,7 @@
             <div class="row pt-5">
                 <div class="col-md-8 text-center text-md-start mx-auto">
                     <div class="text-center">
-                        <h4 class="display-4 fw-bold mb-5" style="font-size: 30.3px;">Search database using coding languages, technologies or frameworks</h4>
+                        <h4 class="display-4 fw-bold mb-5" style="font-size: 30.3px;">Search database using coding <u>languages</u>, <u>technologies</u> or <u>frameworks</u></h4>
                     </div>
                 </div>
             </div>
