--- a/sources/templates/contacts.html
+++ b/sources/templates/contacts.html
@@ -24,9 +24,9 @@
         </div>
         <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3 navbar-light" id="mainNav">
             <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>JobDatabase</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1" style="margin-left: 449px;">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <div class="collapse navbar-collapse" id="navcol-1">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="contacts.html"><span style="color: rgb(0, 0, 0);">About</span></a></li>
                     </ul>
                 </div>
