--- a/sources/templates/contacts.html
+++ b/sources/templates/contacts.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contacts.html"><span style="color: rgb(0, 0, 0);">About</span></a></li>
+                        <li class="nav-item"><a class="nav-link active" href="contacts.html"><strong><span style="color: rgb(0, 0, 0);">About</span></strong></a></li>
                     </ul>
                 </div>
             </div>
