--- a/sources/templates/contacts.html
+++ b/sources/templates/contacts.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>About</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/css/custom.css') }}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
 </head>
 
 <body>
@@ -15,7 +14,7 @@
         <div class="container pt-4 pt-xl-5">
             <div class="row pt-5">
                 <div class="col-md-8 text-center text-md-start mx-auto text-justify">
-                    <p style="padding-right: 0px;margin-right: 0px;padding-bottom: 0px;margin-bottom: 5px;">This website was created by <a href="https://www.linkedin.com/in/peetuskytta/"><span style="color: rgb(18, 22, 67);">Peetu Skyttä</span></a> and <a href="https://www.linkedin.com/in/aleksi-sukava-357230265/"><span style="color: rgb(18, 22, 67);">Aleksi Sukava</span></a> to help streamline the job application process in IT. The project was born out of a want for a quick and distraction free alternative to the popular portals.&nbsp;<br><br>Application autonomously scrapes websites for IT-related keywords, saving relevant job positions in the database. The distraction-free UI allows anyone to search for IT job opportunities quickly.<br><br>Technologies used include Python Flask, Javascript, SDLite and Apache.<br>App is hosted on an Oracle Cloud compute instance running Oracle Linux.<br><br>For questions or suggestions, don't hesitate to contact us.</p>
+                    <p style="padding-right: 0px;margin-right: 0px;padding-bottom: 0px;margin-bottom: 5px;">This website was created by <a href="https://www.linkedin.com/in/peetuskytta/"><span style="color: rgb(18, 22, 67);">Peetu Skyttä</span></a> and <a href="https://www.linkedin.com/in/aleksi-sukava-357230265/"><span style="color: rgb(18, 22, 67);">Aleksi Sukava</span></a> to help streamline the job application process in IT. The project was born out of a want for a quick and distraction free alternative to the popular portals.&nbsp;<br><br>Application autonomously scrapes websites for IT-related keywords, saving relevant job positions in the database. The distraction-free UI allows anyone to search for IT job opportunities quickly.<br><br>Technologies used include Python Flask, Javascript, SQLite and Apache.<br>App is hosted on an Oracle Cloud compute instance running Oracle Linux.<br><br>For questions or suggestions, don't hesitate to contact us.</p>
                 </div>
                 <div class="col-12 col-lg-10 mx-auto">
                     <div class="text-center position-relative"></div>
@@ -26,8 +25,8 @@
             <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>JobDatabase</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contacts.html"><strong><span style="color: rgb(0, 0, 0);">About</span></strong></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/"><strong><span style="color: rgb(0, 0, 0);">Home</strong></span></a></li>
+                        <li class="nav-item"><a class="nav-link active" href="contacts.html"><strong span style="color: rgb(0, 0, 0);">About</strong></span></a></li>
                     </ul>
                 </div>
             </div>
