now active page is black and non active is purple. Did this by commenting <span>

--- a/sources/templates/contacts.html
+++ b/sources/templates/contacts.html
@@ -25,8 +25,8 @@
             <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>JobDatabase</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="/"><strong><span style="color: rgb(0, 0, 0);">Home</strong></span></a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contacts.html"><strong span style="color: rgb(0, 0, 0);">About</strong></span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/"><strong><!span style="color: rgb(0, 0, 0);">Home</strong><!/span></a></li>
+                        <li class="nav-item"><a class="nav-link active" href="contacts.html"><!strong span style="color: rgb(0, 0, 0);">About</strong><!/span></a></li>
                     </ul>
                 </div>
             </div>
