--- a/sources/templates/index.html
+++ b/sources/templates/index.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html"><strong><span style="color: rgb(0, 0, 0);">About</span></strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html"><strong><!span style="color: rgb(0, 0, 0);">About<!/span></strong></a></li>
                 </ul>
             </div>
         </div>
