--- a/sources/templates/index.html
+++ b/sources/templates/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Job Database</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/custom.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/css/custom.css') }}">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html"><strong><!span style="color: rgb(0, 0, 0);">About<!/span></strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html"><strong span style="color: rgb(0, 0, 0);">About</span></strong></a></li>
                 </ul>
             </div>
         </div>
