--- a/webapp/templates/contacts.html
+++ b/webapp/templates/contacts.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/"><strong span style="color: rgb(0, 0, 0);">Home</strong></span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contacts.html"><strong span style="color: rgb(0, 0, 0);">About</strong></span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contacts"><strong span style="color: rgb(0, 0, 0);">About</strong></span></a></li>
                 </ul>
             </div>
         </div>
