hide buttons in UI and added sorting by date to the search results

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -39,8 +39,8 @@
         </form>
 
             <div id="filterButtons" style="display: none;">
-                <button class="btn btn-primary" id="filterAll">Show All</button>
-                <button class="btn btn-primary" id="filterPython">Python</button>
+                <!-- <button class="btn btn-primary" id="filterAll">Show All</button>
+                <button class="btn btn-primary" id="filterPython">Python</button> -->
             </div>
 
             <!-- Display container for the returned data -->
